modules/envoy-lb/cloud-init.yml
#cloud-config
write_files:
  - path: /etc/envoy/envoy.yaml
    content: |
      static_resources:
        listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                  - name: backend_service
                    domains: ["*"]
                    routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: backend_cluster
                        timeout: 15s
                http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

        clusters:
        - name: backend_cluster
          connect_timeout: 5s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          dns_lookup_family: V4_ONLY
          load_assignment:
            cluster_name: backend_cluster
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: api-backend.api.internal
                      port_value: 8080
          health_checks:
          - timeout: 2s
            interval: 5s
            unhealthy_threshold: 2
            healthy_threshold: 2
            http_health_check:
              path: "/"

      admin:
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 9901

packages:
  - docker.io

runcmd:
  - systemctl start docker
  - systemctl enable docker
  - mkdir -p /etc/envoy
  - docker run -d --name envoy --network host -v /etc/envoy:/etc/envoy envoyproxy/envoy:v1.31-latest
